secKill 静态页面优化，缓存优化，安全优化

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,24 @@ server:
 spring:
   application:
     name: seckill
+    #静态资源处理
+    resources:
+      #启动默认静态资源处理，默认启用
+      add-mappings: true
+      cache:
+        cachecontrol:
+          #缓存相应时间，单位秒
+          max-age: 3600
+      chain:
+        #资源链启动缓存，默认启动
+        cache: true
+        #启用资源链，默认禁用
+        enabled: true
+        #启用压缩资源(gzip,brotli)解析，默认禁用
+        compressed: true
+        #启用h5应用缓存，默认禁用
+        html-application-cache: true
+      static-locations: classpath:/static/
   thymeleaf:
     cache: false
     # 数据源配置
@@ -33,8 +51,51 @@ spring:
     database: 0
     host: 127.0.0.1
     port: 6379
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
+  # RabbitMQ
+  rabbitmq:
+    #服务器
+    host: 127.0.0.1
+    #用户名
+    username: guest
+    #密码
+    password: guest
+    # 虚拟主机
+    virtual-host: /
+    #端口
+    port: 5672
+    listener:
+      simple:
+        #消费者最小数量
+        concurrency: 10
+        #消费者最大数量
+        max-concurrency: 10
+        #限制消费者每次只处理一条消息，处理完再继续下一条消息
+        prefetch: 1
+        #启动时是否默认启动容器，默认true
+        auto-startup: true
+        #被拒绝时重新进入队列
+        default-requeue-rejected: true
+    template:
+      retry:
+        #发布重试，默认false
+        enabled: true
+        #重试时间，默认1000ms
+        initial-interval: 1000ms
+        #重试最大次数，默认3次
+        max-attempts: 3
+        #重试最大间隔时间，默认10000ms
+        max-interval: 10000ms
+        #重试的间隔乘数。比如配2.0，第一次就等10s，第二次就等20s，第三次就等40s
+        multiplier: 1
+
 
 # MyBatis SQL打印(方法接口所在的包，不是Mapper.xml所在的包)
-logging:
-  level:
-    com.example.seckill.mapper: debug
+#logging:
+#  level:
+#    com.example.seckill.mapper: debug
